<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_preferences">
    <EditTextPreference
        android:defaultValue="@string/default_name"
        android:inputType="text"
        android:key="player"
        android:summary="@string/text_name"
        android:title="@string/label_name" />
    <EditTextPreference
        android:defaultValue="@integer/default_fragments"
        android:inputType="number"
        android:key="fragments"
        android:summary="@string/text_fragment_number"
        android:title="@string/label_fragments_number" />
    <CheckBoxPreference
        android:defaultValue="@bool/default_music"
        android:key="music"
        android:summary="Se reproduce música de fondo"
        android:title="Reproducir música" />
    <ListPreference
        android:defaultValue="@string/default_graphics"
        android:entries="@array/graphicTypes"
        android:entryValues="@array/graphicTypesValues"
        android:key="graphics"
        android:summary="@string/text_graphic_types"
        android:title="@string/label_graphic_types" />
    <ListPreference
        android:defaultValue="@string/default_controls"
        android:entries="@array/controlTypes"
        android:entryValues="@array/controlTypesValues"
        android:key="controls"
        android:summary="@string/text_control_types"
        android:title="@string/label_control_types" />
    <ListPreference
        android:defaultValue="@string/default_storage"
        android:entries="@array/storageTypes"
        android:entryValues="@array/storageTypesValues"
        android:key="storage"
        android:summary="@string/text_storage"
        android:title="@string/label_storage" />

</PreferenceScreen>